deployment/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-3tier-gateway
  namespace: 3-tier
  
spec:
  gatewayClassName: amazon-vpc-alb

 
  listeners:
  - name: http
    protocol: HTTP
    port: 80
