deployment/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: 3-tier
spec:
  parentRefs:
  - name: my-3tier-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name:  3-tier-app-service
      port: 80
